# ParaSAT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cc
cmake/: ConfigSafeGuards.cmake  cmake_uninstall.cmake.in  config.cmake.in
include/parasat/: config.h
include/parasat/core/: Dimacs.h  Solver.h  SolverTypes.h
include/parasat/mtl/: Alg.h  Alloc.h  Heap.h  IntMap.h  IntTypes.h  Map.h  Queue.h  Rnd.h  Sort.h  Vec.h  XAlloc.h
include/parasat/simp/: SimpSolver.h
include/parasat/utils/: Logging.h  Options.h  ParseUtils.h  System.h
script/: process_benchmark.py
src/: CMakeLists.txt
src/core/: Solver.cc
src/simp/: SimpSolver.cc
src/utils/: Logging.cc  Options.cc  System.cc
test/: CMakeLists.txt  run_satcomp_bench.cc  run_sc_bench.h  t_sat19_rand.cc  t_sc18_main.cc  t_sc18_rand.cc
test/data/: .gitignore  config.h.in  ref_sc18_barthel.json  ref_sc18_cril.json  ref_sc18_komb.json  ref_sc18_qhid.json
